# lstm-clv-model

./: .gitignore  README.md  cdnow.ipynb  data_description.ipynb  fintech.ipynb  pyproject.toml
data-cdnow/: CDNOW_master.txt
lstm_clv/: __init__.py  api.py  api_utils.py
lstm_clv/data_types/: __init__.py  data_for_lstm.py  events_metadata.py  profit_margins.py  scaler.py  user_attributes.py  user_events.py
lstm_clv/libs/: __init__.py  array_archive.py  config.py  list_indexer.py  logging.py  lstm_model.py  metrics.py  numpy_utils.py  pandas_utils.py  path_management.py
lstm_clv/libs/tests/: test_numpy_utils.py  test_scaler.py
lstm_clv/pipeline/: benchmark.py  grid_search.py  lstm_model.py  preparation.py
