[tool.poetry]
name = "lstm-clv"
version = "0.1.0"
description = "Code appendix to thesis..."
authors = ["Gleb Zhidkov <glebshidkow@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.4"
tensorflow = "^2.7.0"
pandas = "^1.3.4"
pydot = "^1.4.2"
graphviz = "^0.18.2"
Lifetimes = "^0.11.3"
pathos = "^0.2.8"
tqdm = "^4.62.3"
scipy = "^1.7.3"
ipykernel = "^6.5.1"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
